--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "src"
   ],
   "scripts": {
+    "dev": "cypress open",
     "test": "cypress run",
     "semantic-release": "semantic-release"
   },
