--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-development",
   "description": "A way to re-run Cypress commands until a predicate function returns true",
   "main": "src",
+  "types": "src/index.d.ts",
   "files": [
     "src"
   ],
