feat: add types, closes #9

--- a/renovate.json
+++ b/renovate.json
@@ -1,29 +1,16 @@
 {
-  "extends": [
-    "config:base"
-  ],
+  "extends": ["config:base"],
   "automerge": true,
   "prHourlyLimit": 2,
   "updateNotScheduled": false,
   "timezone": "America/New_York",
-  "schedule": [
-    "after 10pm and before 5am on every weekday",
-    "every weekend"
-  ],
+  "schedule": ["after 10pm and before 5am on every weekday", "every weekend"],
   "masterIssue": true,
-  "labels": [
-    "type: dependencies",
-    "renovate"
-  ],
+  "labels": ["type: dependencies", "renovate"],
   "packageRules": [
     {
-      "packagePatterns": [
-        "*"
-      ],
-      "excludePackagePatterns": [
-        "cypress",
-        "semantic-release"
-      ],
+      "packagePatterns": ["*"],
+      "excludePackagePatterns": ["cypress", "semantic-release", "typescript"],
       "enabled": false
     }
   ]
