--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "cypress open",
     "test": "cypress run",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "lint": "tsc --pretty --allowJs --strict --noEmit cypress/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "cypress": "8.6.0",
     "prettier": "2.2.1",
-    "semantic-release": "18.0.0"
+    "semantic-release": "18.0.0",
+    "typescript": "^4.4.4"
   }
 }
