--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "chai-sorted": "^0.2.0",
     "cypress": "9.5.0",
+    "cypress-command-chain": "^1.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "2.2.1",
     "semantic-release": "19.0.2",
