rework the CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,19 +2,22 @@ name: ci
 on: push
 jobs:
   test:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout 🛎
-        uses: actions/checkout@v2
+    # https://github.com/bahmutov/cypress-workflows
+    uses: bahmutov/cypress-workflows/.github/workflows/parallel.yml@v1
+    with:
+      n: 4
+    env:
+      CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
-      - name: Run tests 🧪
+  release:
+    runs-on: ubuntu-20.04
+    needs: test
+    steps:
+      - name: Run linter 🧪
         uses: cypress-io/github-action@v2
         with:
           # runs linting
-          build: npm run build
-          record: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          command: npm run build
 
       - name: Semantic Release 🚀
         uses: cycjimmy/semantic-release-action@v2
