use old version of find-cypress-specs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
       # https://github.com/bahmutov/find-cypress-specs
       - name: Install find-cypress-specs@1.17
-        run: npm install -g find-cypress-specs
+        run: npm install --location=global find-cypress-specs@1.17
       - name: Print Cypress test names 🖨
         run: find-cypress-specs --names
       - name: Print Cypress test tags if any 🖨
