--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev": "cypress open",
     "test": "cypress run",
     "semantic-release": "semantic-release",
-    "lint": "tsc --pretty --allowJs --strict --noEmit cypress/integration/**/*.js cypress/integration/*.js cypress/plugins/*.js",
-    "stop-only": "stop-only --folder cypress/integration",
+    "lint": "tsc --pretty --allowJs --strict --noEmit cypress/e2e/**/*.js cypress/e2e/*.js cypress/plugins/*.js",
+    "stop-only": "stop-only --folder cypress/e2e",
     "build": "run-s lint stop-only"
   },
   "repository": {
@@ -31,10 +31,10 @@
   "homepage": "https://github.com/bahmutov/cypress-recurse#readme",
   "devDependencies": {
     "chai-sorted": "^0.2.0",
-    "cypress": "9.7.0",
+    "cypress": "11.1.0",
     "cypress-command-chain": "1.1.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.2.1",
+    "prettier": "2.7.1",
     "semantic-release": "19.0.5",
     "stop-only": "^3.1.2",
     "typescript": "4.8.4"
