--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "semantic-release": "semantic-release",
     "lint": "tsc --pretty --allowJs --strict --noEmit cypress/e2e/**/*.js cypress/e2e/*.js cypress/plugins/*.js",
     "stop-only": "stop-only --folder cypress/e2e",
-    "build": "run-s lint stop-only"
+    "build": "run-s lint stop-only",
+    "print-tests": "find-cypress-specs --names",
+    "print-tags": "find-cypress-specs --tags"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,7 @@
     "chai-sorted": "^0.2.0",
     "cypress": "11.1.0",
     "cypress-command-chain": "1.1.2",
+    "find-cypress-specs": "^1.19.3",
     "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
     "semantic-release": "19.0.5",
