--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "semantic-release": "19.0.5",
     "stop-only": "^3.1.2",
     "typescript": "4.8.4"
+  },
+  "dependencies": {
+    "humanize-duration": "^3.27.3"
   }
 }
