--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/node": "^18.11.17",
     "chai-sorted": "^0.2.0",
+    "common-tags": "^1.8.2",
     "cypress": "12.8.1",
     "cypress-command-chain": "1.1.2",
     "find-cypress-specs": "^1.19.3",
