--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src",
   "types": "src/index.d.ts",
   "files": [
-    "src"
+    "src",
+    "commands.js"
   ],
   "scripts": {
     "dev": "cypress open",
