--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "common-tags": "^1.8.2",
     "cypress": "12.12.0",
     "cypress-command-chain": "1.1.2",
+    "cypress-map": "^1.20.1",
     "find-cypress-specs": "^1.19.3",
     "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
