--- a/.github/workflows/badges.yml
+++ b/.github/workflows/badges.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Update version badges 🏷
-        run: npx -p dependency-version-badge update-badge cypress
+        run: npm run badges
 
       - name: Commit any changed files 💾
         uses: stefanzweifel/git-auto-commit-action@v4
