--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "common-tags": "^1.8.2",
     "cypress": "13.7.1",
     "cypress-command-chain": "1.1.2",
+    "cypress-if": "^1.12.0",
     "cypress-map": "^1.20.1",
     "find-cypress-specs": "^1.19.3",
     "npm-run-all": "^4.1.5",
